# fastapi_no_sql

./: .env_example  Dockerfile  base_setting.py  docker-compose.yml  main.py  pyproject.toml  settings.py
database/: database.py  models.py
database/dao/: base.py  dao.py
database/methods/: CountryMethods.py  GameMethods.py  StadiumMethods.py  UserMethods.py
database/models/: Country.py  Game.py  Stadium.py  User.py
database/repo/: exceptions.py  repository.py
game/: game_router.py  schema.py
migrations/: env.py
migrations/versions/: 15d970b43df7_.py  2d7e163435d1_.py  4a22c2a880e4_.py  5d37e15b13e1_.py  67a48c8eb683_.py  705e6f823eb6_.py  88e6a056b870_.py  9269056e48fc_.py  b76825cb3a4f_.py  b79be0e86f76_.py  d02b56becc5e_.py  df2c75bc4a36_.py  f3f4596e474e_.py
routers/: utils.py
routers/auth/: auth_router.py  schemas.py  utils.py
routers/country/: country_router.py  schemas.py
routers/elast/: elastic.py
routers/game/: game_router.py  schemas.py
routers/stadium/: schemas.py  stadium_router.py
