[tool.poetry]
name = "dp-test-no-sql"
version = "0.1.0"
description = ""
authors = ["develophub <mixan_45@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"
betterlogging = "^1.0.0"
asyncpg = "^0.30.0"
python-jose = "^3.4.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
elasticsearch = "7.17.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
